XSCOLIBRI-244: Broken layout in IE6/7 caused by vertical-align: inherit Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@32512 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -24,7 +24,6 @@ html, body, div, span, applet, object, iframe,
   margin: 0;
   outline: 0;
   padding: 0;
-  vertical-align: inherit;
   text-align: inherit;
   line-height: normal;
 }
@@ -145,6 +144,10 @@ input[type="text"], input[type="password"], textarea, select {
 table {
   border-collapse: collapse;
   vertical-align: middle;
+}
+thead, tbody, tfoot {
+  /* Override default browser styles. */
+  vertical-align: inherit;
 }
 
 caption, th, td {
